test/tests/stages/16_characters_and_strings/invalid_types/extra_credit/bit_shift_string.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[14]:
  int
  identifier(main)
  (
  void
  )
  {
  string literal("foo")
  <<
  const int(3)
  ;
  return
  const int(0)
  ;
  }
